               a bunch of reions in there
   HBASE-1487  ProcessRegionOpen in line 82, LOG.info() outputs
               "Bytes.toString(this.startCode)", which gives those non-printables
   HBASE-1524  TableInputFormatBase.TableRecordReader.restart() @line 110.
               "startRow" should be changed to "firstRow"
               (Qiaoilang Xiang via Stack)

Release 0.19.3 - May 27th, 2009
  BUG FIXES
   HBASE-1413  fall back to filesystem block size default if
               hbase.regionserver.hlog.blocksize is not specified
   HBASE-1344  WARN IllegalStateException: Cannot set a region as open if
               it has not been pending
   HBASE-1362  .META. may not come back if regionserver crashes
               (Nitay Joffe via Stack)
   HBASE-1431  NPE in HTable.checkAndSave when row doesn't exist (Guilherme
               Mauro Germoglio Barbosa via Andrew Purtell)
   HBASE-1421  Processing a regionserver message -- OPEN, CLOSE, SPLIT, etc.
               -- and if we're carrying more than one message in payload,
               if exception, all messages that follow are dropped on floor
   HBASE-1386  NPE in housekeeping
   HBASE-1435  HRegionServer is using wrong info bind address from
               hbase-site.xml (Lars George via Stack)
   HBASE-1441  NPE in ProcessRegionStatusChange#getMetaRegion

  IMPROVEMENTS
   HBASE-1418  Transacitonal improvments and fixes (Clint Morgan via Stack)
   HBASE-1424  have shell print regioninfo and location on first load if
               DEBUG enabled
   HBASE-1008  [performance] The replay of logs on server crash takes way too
               long
   HBASE-1401  close HLog (and open new one) if there hasnt been edits in
               N minutes/hours
   HBASE-1420  add abliity to add and remove table) indexes on existing
               tables (Clint Morgan via Stack)
   HBASE-1430  Read the logs in batches during log splitting to avoid OOME

Release 0.19.2 - May 9th, 2009 
  BUG FIXES